--- a/CriminalIntent/src/main/res/values/strings.xml
+++ b/CriminalIntent/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="new_crime">New Crime</string>
     <string name="show_subtitle">Show Subtitle</string>
     <string name="hide_subtitle">Hide Subtitle</string>
+    <string name="delete_crime">Delete Crime</string>
     <string name="subtitle_format">%1$s crimes</string>
 </resources>
