--- a/CriminalIntent/src/main/res/values/strings.xml
+++ b/CriminalIntent/src/main/res/values/strings.xml
@@ -13,5 +13,9 @@
     <string name="show_subtitle">Show Subtitle</string>
     <string name="hide_subtitle">Hide Subtitle</string>
     <string name="delete_crime">Delete Crime</string>
-    <string name="subtitle_format">%1$s crimes</string>
+    <!-- 定义复数字符串资源 -->
+    <plurals name="subtitle_plural">
+        <item quantity="one">%1$s crime</item>
+        <item quantity="other">%1$s crimes</item>
+    </plurals>
 </resources>
