--- a/BeatBox/src/main/res/values/strings.xml
+++ b/BeatBox/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Big-Nerd-Ranch-Guide</string>
+    <string name="app_name">BeatBox</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
