--- a/NerdLauncher/src/main/res/values/strings.xml
+++ b/NerdLauncher/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Big-Nerd-Ranch-Guide</string>
+    <string name="app_name">NerdLauncher</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
